# RaftProject

./: CMakeLists.txt  README.md
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake  raft_node
src/: log_store.cpp  log_store.h  main.cpp  network.cpp  network.h  raft_node.cpp  raft_node.h
tests/: test_raft.cpp
